<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/geojit_green"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragments.MyPorfolioFragment">

    <!--    <include layout="@layout/toolbar" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/portfolio_result_header"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/box_drawable"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:weightSum="3">

                <com.geojit.libin.sip_v3.components.SIPTextView
                    android:id="@+id/currentHoldingCostLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/portfolio_current_holding_cost"
                    android:textColor="@android:color/white" />

                <com.geojit.libin.sip_v3.components.SIPTextView
                    android:id="@+id/currentHoldingCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="2,15,073"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/portfolio_current_holding_cost" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:weightSum="3">

                <com.geojit.libin.sip_v3.components.SIPTextView
                    android:id="@+id/currentHoldingValueLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/portfolio_current_holding_value"
                    android:textColor="@android:color/white" />

                <com.geojit.libin.sip_v3.components.SIPTextView
                    android:id="@+id/currentHoldingValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="2,15,073.83"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/portfolio_current_holding_cost" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    !-- Heading Layout --!

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/portfolio_header_height"
        android:orientation="horizontal"
        android:weightSum="15">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"></LinearLayout>

        <com.geojit.libin.sip_v3.components.SIPTextView
            android:id="@+id/navHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="right"
            android:text="@string/navHeading"
            android:textColor="@color/portfolio_header_color"
            android:textSize="@dimen/portfolio_nav_heading" />

        <com.geojit.libin.sip_v3.components.SIPTextView
            android:id="@+id/holdingUnitHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="right"
            android:text="@string/holdingUnitHeading"
            android:textColor="@color/portfolio_header_color"
            android:textSize="@dimen/holding_unit_heading" />

        <com.geojit.libin.sip_v3.components.SIPTextView
            android:id="@+id/holdingValueHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="right"
            android:text="@string/holdingValueHeading"
            android:textColor="@color/portfolio_header_color"
            android:textSize="@dimen/holding_value_heading" />

    </LinearLayout>


    !-- List Layout --!

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerPortfolio"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
